{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 10,
  "lineage": "7d414ab9-e6c4-8432-18eb-24e529bbffef",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf_nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/networkInterfaces/VM_NIC",
            "ip_configuration": [
              {
                "name": "VM_NIC_Config",
                "primary": true,
                "private_ip_address": "172.31.1.4",
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/publicIPAddresses/VM_Public_IP",
                "subnet_id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/virtualNetworks/RonNet/subnets/Public"
              }
            ],
            "location": "eastus",
            "name": "VM_NIC",
            "network_security_group_id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/networkSecurityGroups/Public_SG",
            "private_ip_address": "172.31.1.4",
            "private_ip_addresses": [
              "172.31.1.4"
            ],
            "resource_group_name": "ron_ex2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.tf_sg",
            "module.network.azurerm_public_ip.tf_public_ip",
            "module.network.azurerm_resource_group.tf_rg",
            "module.network.azurerm_subnet.tf_public_subnet",
            "module.network.azurerm_virtual_network.tf_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf_sg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/networkSecurityGroups/Public_SG",
            "location": "eastus",
            "name": "Public_SG",
            "resource_group_name": "ron_ex2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound_SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound_HTTPS",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound_HTTP",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "module.network.azurerm_resource_group.tf_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/publicIPAddresses/VM_Public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.45.138.92",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "VM_Public_IP",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "ron_ex2",
            "sku": "Basic"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.tf_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "tf_RT",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/routeTables/Private_RT",
            "location": "eastus",
            "name": "Private_RT",
            "resource_group_name": "ron_ex2",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "drop_Int_access",
                "next_hop_in_ip_address": "",
                "next_hop_type": "None"
              }
            ],
            "subnets": [],
            "tags": {}
          },
          "dependencies": [
            "module.network.azurerm_resource_group.tf_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf_private_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.31.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/virtualNetworks/RonNet/subnets/Private",
            "name": "Private",
            "resource_group_name": "ron_ex2",
            "route_table_id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/routeTables/Private_RT",
            "virtual_network_name": "RonNet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.tf_rg",
            "module.network.azurerm_route_table.tf_RT",
            "module.network.azurerm_virtual_network.tf_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf_public_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.31.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/virtualNetworks/RonNet/subnets/Public",
            "name": "Public",
            "resource_group_name": "ron_ex2",
            "virtual_network_name": "RonNet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.tf_rg",
            "module.network.azurerm_virtual_network.tf_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "tf_RT_associaton",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/virtualNetworks/RonNet/subnets/Private",
            "route_table_id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/routeTables/Private_RT",
            "subnet_id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/virtualNetworks/RonNet/subnets/Private"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.tf_rg",
            "module.network.azurerm_route_table.tf_RT",
            "module.network.azurerm_subnet.tf_private_subnet",
            "module.network.azurerm_virtual_network.tf_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tf_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.31.0.0/16"
            ],
            "id": "/subscriptions/c485bb24-9cf2-4432-a70f-51759e2679e0/resourceGroups/ron_ex2/providers/Microsoft.Network/virtualNetworks/RonNet",
            "location": "eastus",
            "name": "RonNet",
            "resource_group_name": "ron_ex2"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.tf_rg"
          ]
        }
      ]
    }
  ]
}